# zotero-bib-to-gh

./: .gitignore  pyproject.toml  zotero-bib-to-gh.py
.github/workflows/: stale.yml  zotero-bib-to-git.yml
bibliography/: 2256884.bib
